--- a/css/styles.css
+++ b/css/styles.css
@@ -82,12 +82,14 @@ header{
   border: 1px solid green;
   border-radius: .5rem;
   width: 50%;
-  height: 400px;
+  height: 450px;
   margin: auto;
 }
 
 .opponent, .you{
-  gap: 2rem;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 1.5rem;
   padding: 1rem 1.5rem;
 }
 .gameppt{
@@ -97,6 +99,12 @@ header{
   cursor: pointer;
   border-radius: 50%;
 }
-.opponent button img, .gameppt img{
+.opponent img, .gameppt img{
   border-radius: 50%;
+}
+.none{
+  display: none;
+}
+#restart{
+  margin: auto;
 }
