--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,14 @@ header{
     text-align: center;
     padding: 2rem;
 }
+section{
+  height: 100vh;
+  width: 85%;
+}
+.section{
+  width: 85%;
+  margin: 2rem 0;
+}
 .title{
     color: rgb(30, 30, 51);
 }
