--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,7 @@ section{
 .ppt-1{
   border: 1px solid green;
   border-radius: .5rem;
-  width: 50%;
+  width: 70%;
   height: 450px;
   margin: auto;
 }
@@ -125,4 +125,7 @@ section{
 }
 .card-time img{
   max-width: 200px;
+}
+#weather{
+  margin-top: 15rem;
 }
