--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,7 @@ section{
   flex-direction: column;
 }
 .ppt-1{
-  border: 1px solid green;
+  
   border-radius: .5rem;
   width: 70%;
   height: 450px;
@@ -100,14 +100,14 @@ section{
   gap: 1.5rem;
   padding: 1rem 1.5rem;
 }
-.gameppt{
+.gameppt, .gameppt2{
   border: none;
   outline: none;
   background-color: inherit;
   cursor: pointer;
   border-radius: 50%;
 }
-.opponent img, .gameppt img{
+.opponent img, .gameppt img, .gameppt2 img{
   border-radius: 50%;
 }
 .none{
