--- a/css/styles.css
+++ b/css/styles.css
@@ -113,8 +113,15 @@ section{
 .none{
   display: none;
 }
-#restart{
+#restart, #restart2{
   margin: auto;
+  outline: none;
+  border: none;
+  padding: 1rem 2rem;
+  background-color: rgb(155, 155, 223);
+  border-radius: .5rem;
+  cursor: pointer;
+  font-weight: bold;
 }
 .card-time{
   width: 40%;
@@ -127,9 +134,9 @@ section{
   max-width: 200px;
 }
 #weather{
-  margin-top: 15rem;
+  margin-top: 20rem;
 }
-#result{
+#result, #result2{
   background-color: white;
   z-index: 2;
   width: 30%;
