--- a/css/styles.css
+++ b/css/styles.css
@@ -149,3 +149,10 @@ section{
   border: 2px solid black;
   box-shadow: 1px 1px 1px black;
 }
+.advice{
+  background-color: hsl(217, 19%, 38%);
+  width: 400px;
+  height: 400px;
+  margin: 0 auto;
+  border-radius: .5rem;
+}
