--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ section{
   height: 100vh;
   width: 85%;
 }
-.section{
+.section, .article{
   width: 85%;
   margin: 2rem 0;
 }
@@ -170,6 +170,46 @@ section{
 }
 .large{
   font-weight: bold;
-  font-size: 30px;
+  font-size: 40px;
+
+}
+.age-calc{
+  margin: 0 auto;
+  width: 60%;
+}
+/*E-commerce*/
+#ecommerce{
   
+  padding: 2rem;
+}
+.article{
+  gap: 1rem;
+}
+.menues{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 2rem;
+  gap: 1.5rem;
+
+}
+.menues picture img{
+  display: block;
+  width: 250px;
+  height: 250px;
+  border-radius: .5rem;
+}
+.menu-desserts{
+  width: 80%;
+  flex-wrap: wrap;
+  border-radius: .5rem;
+  height: max-content;
+  background-color: hsl(13, 31%, 94%);
+}
+.cart{
+  border-radius: .5rem;
+  width: 25%;
+  height: 400px;
+  padding: 2.5rem;
+  background-color: hsl(20, 50%, 98%);
 }
