--- a/css/styles.css
+++ b/css/styles.css
@@ -199,6 +199,39 @@ section{
   height: 250px;
   border-radius: .5rem;
 }
+.menues p{
+  color: hsl(7, 20%, 60%);
+}
+.menues h4{
+  color: hsl(14, 86%, 42%);
+}
+.menues button{
+  background-color: hsl(20, 50%, 98%);
+  border: 1px solid hsl(14, 65%, 9%);
+  border-radius: 20px;
+  padding: .5rem 1.5rem;
+  outline: none;
+  font-weight: bold;
+  position: relative;
+  top: -5%;
+  left: 20%;
+  cursor: pointer;
+}
+.menues .selected{
+  display: flex;
+  justify-content: space-between;
+  background-color: hsl(14, 86%, 42%);
+  gap: 1.6rem;
+  color: hsl(20, 50%, 98%);
+  position: relative;
+  top: -14%;
+  left: 20%;
+  z-index: 1;
+}
+.menues .selected img{
+  width: 15px;
+  height: 15px;
+}
 .menu-desserts{
   width: 80%;
   flex-wrap: wrap;
@@ -206,9 +239,13 @@ section{
   height: max-content;
   background-color: hsl(13, 31%, 94%);
 }
+#logo, .logo{
+  width: 15px;
+  height: 15px;
+}
 .cart{
   border-radius: .5rem;
-  width: 25%;
+  width: 20%;
   height: 400px;
   padding: 2.5rem;
   background-color: hsl(20, 50%, 98%);
