--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 *{
     margin: 0;
@@ -252,12 +253,28 @@ section{
 }
 #words{
   width: 80%;
+  padding: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
   & .letter{
-    padding: 1rem;
+    padding: 1.5rem;
     background-color: rgb(181, 242, 181);
     outline: none;
     border: 1px solid green;
     border-radius: .5rem;
     cursor: pointer;
   }
+  & .letter:hover{
+    font-weight: bold;
+    box-shadow: 1px 1px 1px rgb(8, 56, 8);
+  }
+}
+#word{
+  font-size: large;
+  letter-spacing: 4rem;
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  background-color: aliceblue;
+  padding: 2rem;
 }
