--- a/css/styles.css
+++ b/css/styles.css
@@ -331,4 +331,18 @@ section{
     border-radius: .5rem;
 
   }
+  & .priority-list{
+    display:flex;
+    flex-direction: column;
+    gap: 1rem;
+    flex-wrap: wrap;
+    width: 80%;
+    justify-content: space-evenly;
+    align-items: center;
+    & .task{
+      background-color: aliceblue;
+      padding: 1rem 5rem;
+      border-radius: .5rem;
+    }
+  }
 }
